# HalfMeter

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
docs/: architecture.md  dev-setup.md  figma.md  roadmap.md  spec.md  ui.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/ui/: MeterTile.cpp  MeterTile.h
